# platform

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  opencode.json  pyproject.toml
.github/workflows/: ci.yml  copilot-review.yml
docs/: architecture.md  configuration.md  elasticsearch-indexing.md  project-context.md  roadmap.md  vision.md
docs/ADRs/: ADR-001-monorepo.md  ADR-002-python-fastapi.md  ADR-002-rabbitmq.md  ADR-003-provider-abstraction.md  ADR-004-event-driven-communication.md  ADR-005-investigation-lifecycle-events.md  ADR-006-notification-service-architecture.md  ADR-007-llm-provider-compatibility-layer.md  ADR-008-composition-root.md  ADR-009-rabbitmq.md  ADR-010-signal-extraction.md
docs/api/: correlation-service.postman_collection.json  gateway-service.postman_collection.json  ingestion-service.postman_collection.json
examples/: _sample_events.json  event_contracts.py  provider_interfaces.py
infrastructure/: __init__.py
infrastructure/auth/: __init__.py  env_api_key_store.py
infrastructure/discord/: __init__.py  discord_notification_provider.py
infrastructure/discord/tests/: test_discord_provider.py
infrastructure/docker/: python-service-test.Dockerfile
infrastructure/elasticsearch/: __init__.py  elasticsearch_incident_store.py  elasticsearch_investigation_store.py  elasticsearch_log_store.py  incident_index_strategy.py  investigation_index_strategy.py
infrastructure/elasticsearch/tests/: test_elasticsearch_incident_store.py  test_elasticsearch_log_store.py
infrastructure/monitoring/: __init__.py
infrastructure/monitoring/otel/: __init__.py  demo-export.yml  instrumentation.py  otel-collector.yml  otel_observability_provider.py  otel_tracer_provider.py
infrastructure/openai/: __init__.py  openai_llm_provider.py
infrastructure/openai/tests/: test_openai_llm_provider.py
infrastructure/rabbitmq/: __init__.py  rabbitmq_event_bus.py
infrastructure/rabbitmq/tests/: test_rabbitmq_event_bus.py
infrastructure/slack/: __init__.py  slack_notification_provider.py
infrastructure/slack/tests/: test_slack_provider.py
scripts/: run-local.sh  seed-data.sh  setup.sh  simulate_incident.py
scripts/otel-demo/: setup.sh
services/ai-investigation-service/: Dockerfile  requirements.txt  run.py
services/ai-investigation-service/app/: __init__.py  config.py  main.py  pipeline.py
services/ai-investigation-service/prompts/: __init__.py
services/ai-investigation-service/tests/: conftest.py  test_consumer.py  test_pipeline.py  test_prompts.py
services/correlation-service/: Dockerfile  requirements.txt  run.py
services/correlation-service/app/: config.py  dependencies.py  graph_data.py  main.py  schemas.py
services/correlation-service/tests/: conftest.py  test_consumer.py  test_correlation.py  test_health.py  test_timeline.py
services/gateway-service/: Dockerfile  requirements.txt  run.py
services/gateway-service/app/: __init__.py  config.py  dependencies.py  main.py  schemas.py
services/gateway-service/tests/: conftest.py  test_health.py  test_incidents.py  test_investigations.py
services/incident-service/: Dockerfile
services/ingestion-service/: Dockerfile  requirements.txt
services/ingestion-service/app/: __init__.py  config.py  dependencies.py  main.py  schemas.py
services/ingestion-service/tests/: conftest.py  test_config.py  test_health.py  test_ingest.py
services/notification-service/: Dockerfile  requirements.txt  run.py
services/notification-service/app/: __init__.py  config.py  main.py
services/notification-service/tests/: conftest.py  test_health.py  test_provider_router.py
services/otel-adapter-service/: Dockerfile  requirements.txt  run.py
services/otel-adapter-service/app/: config.py  dependencies.py  main.py
services/otel-adapter-service/tests/: test_otel_normalizer.py
shared/: __init__.py
shared/config/: __init__.py  base.py
shared/config/tests/: __init__.py  test_base.py
shared/contracts/: __init__.py
shared/contracts/events/: base.py  (+5 more)
shared/domain/: __init__.py
shared/observability/: __init__.py
(+93 files in other folders)
