[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rootpilot-platform"
version = "0.1.0"
description = "Autonomous incident investigation platform for distributed systems and cloud-native infrastructure."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "langgraph",
    "openai",
    "aio-pika>=9.5,<10",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "shared",
    "infrastructure",
    "services",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[tool.setuptools.packages.find]
include = [
    "shared*",
    "infrastructure*",
]
exclude = [
    "datasets*",
    "docs*",
    "examples*",
    "scripts*",
    "services*",
]
