[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rootpilot-platform"
version = "0.1.0"
description = "Autonomous incident investigation platform for distributed systems and cloud-native infrastructure."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "langgraph",
    "openai",
    "aio-pika>=9.5,<10",
    "elasticsearch>=8.15,<9",
    "aiohttp>=3.9,<4",
    "slack-sdk>=3.27,<4",
    "httpx>=0.27,<1",
    "opentelemetry-api>=1.28,<2",
    "opentelemetry-sdk>=1.28,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.28,<2",
    "opentelemetry-propagator-aws-xray>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "shared",
    "infrastructure",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [".venv", "build", "dist", "datasets", "docs", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "RUF"]
ignore = ["B905"]
extend-ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG"]
"services/*" = ["ARG", "B008"]
"examples/*" = ["ARG", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = false
exclude = [
    ".venv/",
    "build/",
    "dist/",
    "datasets/",
    "examples/",
    "scripts/",
    "services/",
]

[tool.setuptools.packages.find]
include = [
    "shared*",
    "infrastructure*",
]
exclude = [
    "datasets*",
    "docs*",
    "examples*",
    "scripts*",
    "services*",
]
